# road-fighter

./: .gitignore  CMakeLists.txt  Makefile  README.md  link.txt
res/: Icon.icns  Info.plist.in  index.html
src/: Assets.cpp  Assets.h  Assets.mm  Auxiliar.cpp  Auxiliar.h  Config.h.in  Debug.cpp  Debug.h  FileHandling.cpp  FileHandling.h  Game.cpp  Game.h  List.h  LoadMG2.cpp  QuickTables.cpp  RoadFighter.cpp  RoadFighter.h  Sound.cpp  Sound.h  Tile.cpp  Tile.h  auxiliar.cpp  auxiliar.h  configuration.cpp  filehandling.cpp  filehandling.h  loadmg2.cpp  main.cpp  sound.cpp  sound.h
src/Objects/: CarObject.cpp  CarObject.h  EnemyCarObject.cpp  EnemyCarObject.h  EnemyFastCarObject.cpp  EnemyFastCarObject.h  EnemyNormalCarObject.cpp  EnemyNormalCarObject.h  EnemyRacerCarObject.cpp  EnemyRacerCarObject.h  EnemySlidderCarObject.cpp  EnemySlidderCarObject.h  EnemyTruckObject.cpp  EnemyTruckObject.h  ExplosionObject.cpp  ExplosionObject.h  FuelObject.cpp  FuelObject.h  Object.cpp  Object.h  PlayerCarObject.cpp  PlayerCarObject.h  SemaphoreObject.cpp  SemaphoreObject.h
src/States/: GameoverState.cpp  InterlevelState.cpp  KonamiState.cpp  MenuState.cpp  PlayingState.cpp  PresentationState.cpp
src/sge/: sge_blib.cpp  sge_blib.h  sge_bm_text.cpp  sge_bm_text.h  sge_collision.cpp  sge_collision.h  sge_misc.cpp  sge_misc.h  sge_primitives.cpp  sge_primitives.h  sge_rotation.cpp  sge_rotation.h  sge_shape.cpp  sge_shape.h  sge_surface.cpp  sge_surface.h  sge_textpp.cpp  sge_textpp.h  sge_tt_text.cpp  sge_tt_text.h
